Languages.en.toml - Line 20 - Fixed name of profile picture

--- a/public/index.html
+++ b/public/index.html
@@ -505,7 +505,7 @@
           width="144"
           height="144"
           alt="Keith Baldwin"
-          src="/img/Azure-Unboxed_hu_991b10f91c58c0c1.png">
+          src="/img/keith-baldwin_hu_ffa1ee6e301421be.jpeg">
       
     
     <h1 class="text-4xl font-extrabold">
